--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,5 +21,5 @@ services:
     depends_on:
       - rabbitmq
     environment:
-      AMQP_URL: "amqp://myuser:mypassword@rabbitmq:5672/"
+      CONNECTION_URL: "amqp://myuser:mypassword@rabbitmq:5672/"
     restart: on-failure
